--- a/gear-client/app/templates/products.hbs
+++ b/gear-client/app/templates/products.hbs
@@ -1,1 +1,12 @@
-{{outlet}}
+<h3>Gear</h3>
+
+<div class="well">
+    <ul class="nav nav-pills">
+      {{#link-to 'products.index' tagName="li"}}<a href="">All the gear</a>{{/link-to}}
+      {{#link-to 'products.new' tagName="li"}}<a href="">Add spanky new gear</a>{{/link-to}}
+    </ul>
+</div>
+
+<div class="row">
+  {{outlet}}
+</div>
