--- a/gear-client/app/templates/products/index.hbs
+++ b/gear-client/app/templates/products/index.hbs
@@ -45,6 +45,7 @@
                 </div>
                 <div class="panel-footer">
                     <div class="panel-title pull-right">
+                        {{#link-to 'products.edit' product.id class='btn btn-success btn-xs'}}Mod this{{/link-to}}
                         <button class="btn btn-danger btn-xs" {{action 'deleteProduct' product}}>Vaporize</button>
                     </div>
                     <div class="clearfix">
