Adds radio buttons to product views
Also updates routes for product

--- a/gear-client/app/templates/products/edit.hbs
+++ b/gear-client/app/templates/products/edit.hbs
@@ -1,7 +1,7 @@
 <div class="col-sm-8">
     <div class="panel panel-default">
         <div class="panel-heading">
-            <strong>Add some spanky new gear</strong>
+            <strong>Get modding this gear!</strong>
         </div>
         <div class="panel-body">
             <form class="form-horizontal">
