Refactor category routes

--- a/gear-client/app/templates/products/index.hbs
+++ b/gear-client/app/templates/products/index.hbs
@@ -9,7 +9,7 @@
                     <div class="pull-right category-box category{{product.category.id}}">
                     </div> 
                     <h3 class="panel-title pull-right">
-                        {{#link-to 'category' product.category}}<a href="">{{product.category.name}}</a>{{/link-to}}
+                        {{#link-to 'categories.edit' product.category.id}}<a href="">{{product.category.name}}</a>{{/link-to}}
                     </h3>
                     <div class="clearfix">
                     </div>
