--- a/gear-client/app/templates/products/edit.hbs
+++ b/gear-client/app/templates/products/edit.hbs
@@ -64,15 +64,30 @@
                             </div>
                         </div>
                     </div>
-                </div>                
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">Category</label>
+                            <div class="col-sm-10">
+                                {{input type="select" value=model.category class="form-control"}}
+                            </div>
+                        </div>
+                    </div>
+                </div>                                
             </form>
         </div>
         <div class="panel-footer">
             <div class="panel-title pull-right">
-                <button type="submit" class="btn btn-success" {{action 'saveProduct' model}}>Add this gear</button>
+                <button type="submit" class="btn btn-success" {{action 'saveProduct' model}}>Mod it</button>
             </div>
             <div class="clearfix">
             </div>
         </div>
     </div>
+</div>
+<div class="col-sm-4">
+    {{#product-card product=model}}
+        <br/>
+    {{/product-card}}
 </div>
