--- a/gear-client/app/templates/products/new.hbs
+++ b/gear-client/app/templates/products/new.hbs
@@ -64,7 +64,17 @@
                             </div>
                         </div>
                     </div>
-                </div>                
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">Category</label>
+                            <div class="col-sm-10">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>                              
             </form>
         </div>
         <div class="panel-footer">
@@ -75,4 +85,9 @@
             </div>
         </div>
     </div>
+</div>
+<div class="col-sm-4">
+    {{#product-card product=model}}
+        <br/>
+    {{/product-card}}
 </div>
