--- a/gearclient/app/templates/products/index.hbs
+++ b/gearclient/app/templates/products/index.hbs
@@ -1,8 +1,8 @@
 {{#each model as |product|}}
     <div class="col-md-4">
         {{#product-card product=product}}
-            {{#link-to 'products.edit' product.id class='btn btn-success btn-xs'}}Mod this{{/link-to}}
-            <button class="btn btn-danger btn-xs" {{action 'deleteProduct' product}}>Vaporize it!</button>                     
+            <button class="btn btn-danger btn-xs" {{action 'deleteProduct' product}}>VAPORIZE</button>                     
+            {{#link-to 'products.edit' product.id class='btn btn-success btn-xs'}}MOD{{/link-to}}
         {{/product-card}}
     </div>
 {{/each}}
