Changes to use new measure attribute names

--- a/gearclient/app/templates/components/product-card.hbs
+++ b/gearclient/app/templates/components/product-card.hbs
@@ -22,7 +22,7 @@
         </p>
         <p>Features</p>
         <ul>
-            <li>Weight : {{product.weight}} {{product.weightType}}</li>
+            <li>Weight : {{product.weightValue}} {{product.weightUnit}}</li>
             <li>Shareable?
                 {{#if product.isShareable}} 
                     Yes - {{product.sharedCapacity}} ppl
