--- a/gearclient/app/templates/components/product-card.hbs
+++ b/gearclient/app/templates/components/product-card.hbs
@@ -41,7 +41,7 @@
         </small>                                      
     </div>
     <div class="panel-footer">
-        <div class="panel-title pull-right">
+        <div class="panel-title">
             {{yield}}
         </div>
         <div class="clearfix">
