--- a/gearclient/app/templates/application.hbs
+++ b/gearclient/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
     {{partial 'navbar'}}
     <div class="container-fluid">
         {{outlet}}
