Adds highcharts pie to dashboard (test data)

--- a/gearclient/app/templates/components/category-summary-chart.hbs
+++ b/gearclient/app/templates/components/category-summary-chart.hbs
@@ -1,2 +1,2 @@
-{{high-charts chartOptions=chartOptions content=content}}
-
+{{log chartData}}
+{{high-charts chartOptions=summaryOptions content=chartData theme=theme}}
