--- a/gearclient/app/templates/dashboard.hbs
+++ b/gearclient/app/templates/dashboard.hbs
@@ -1,3 +1,6 @@
-{{category-summary-chart}}
-
-{{outlet}}
+<div class="row">
+    <div class="col-md-6">
+        {{log mymodel}}
+        {{category-summary-chart chartData=model}}
+    </div>
+</div>
