--- a/gearclient/app/templates/dashboard.hbs
+++ b/gearclient/app/templates/dashboard.hbs
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-md-6">
-        {{log mymodel}}
+    <div class="col-md-8">
+        {{log model}}
         {{category-summary-chart chartData=model}}
     </div>
 </div>
