Adds grams and ounces charts to dashboard

--- a/gearclient/app/templates/navbar.hbs
+++ b/gearclient/app/templates/navbar.hbs
@@ -12,7 +12,7 @@
 
     <div class="collapse navbar-collapse" id="main-navbar">
       <ul class="nav navbar-nav">
-            {{#nav-link-to 'dashboard'}}Dashboard{{/nav-link-to}}
+            {{#nav-link-to 'dashboard.grams'}}Dashboard{{/nav-link-to}}
             {{#nav-link-to 'products'}}Gear{{/nav-link-to}}
             {{#nav-link-to 'categories'}}Categories{{/nav-link-to}}
             {{#nav-link-to 'manufacturers'}}Manufacturers{{/nav-link-to}}
