--- a/gearclient/app/templates/dashboard.hbs
+++ b/gearclient/app/templates/dashboard.hbs
@@ -1,6 +1,15 @@
 <div class="row">
-    <div class="col-md-8">
-        {{log model}}
-        {{category-summary-chart chartData=model}}
+    <div class="col-sm-4">
+        <div class="well">
+            <ul class="nav nav-pills">
+              {{#nav-link-to 'dashboard.grams'}}In grams{{/nav-link-to}}
+              {{#nav-link-to 'dashboard.ounces'}}In ounces{{/nav-link-to}}
+            </ul>
+        </div>
     </div>
 </div>
+
+<div class="row">
+    {{outlet}}
+</div>
+
